# AiZO-Project

./: .gitignore  CMakeLists.txt  README.md  run_benchmarks_40.sh  run_tests.sh
.zed/: tasks.json
data/: random_10000.txt  random_100000.txt  random_250000.txt  random_50000.txt  random_500000.txt  reverse_250000.txt  sorted_test.txt
include/algorithms/: BucketSort.hpp  InsertionSort.hpp  QuickSort.hpp
include/modes/: BenchmarkMode.hpp  SingleFileMode.hpp
include/structures/: Array.hpp  CharArray.hpp  DoublyLinkedList.hpp  FloatArray.hpp  SinglyLinkedList.hpp  Stack.hpp  UnsignedArray.hpp
include/utils/: FileIO.hpp  Timer.hpp  Validator.hpp
results/: badanie_A.csv  badanie_B.csv  badanie_C.csv  badanie_Omega.csv  test_bench.csv  test_char.csv  test_float.csv  test_ins.csv  test_stack.csv
src/: main.cpp
src/algorithms/: BucketSort.cpp  InsertionSort.cpp  QuickSort.cpp  QuickSortMultiType.cpp
src/modes/: BenchmarkMode.cpp  SingleFileMode.cpp
src/structures/: Array.cpp  CharArray.cpp  DoublyLinkedList.cpp  FloatArray.cpp  SinglyLinkedList.cpp  Stack.cpp  UnsignedArray.cpp
src/utils/: FileIO.cpp  Validator.cpp  ValidatorMultiType.cpp
tools/: generator.py
